Parse systemd as JSON
Remove (useless?) internal systemd fields.

--- a/fluent.conf
+++ b/fluent.conf
@@ -4,6 +4,21 @@
   port   24224
 </source>
 
+<source>
+  type tcp
+  port 24225
+  format json
+  tag system
+</source>
+
+<match system>
+  type record_reformer
+  renew_record false
+  enable_ruby false
+  remove_keys __CURSOR,__REALTIME_TIMESTAMP,__MONOTONIC_TIMESTAMP,_BOOT_ID,_UID,_GID,_CAP_EFFECTIVE,_SYSTEMD_SLICE,SYSLOG_IDENTIFIER,_SYSTEMD_CGROUP,_CMDLINE,_COMM
+  tag system.clean
+</match>
+
 <match *.**>
   type copy
   <store>
