Trim journald-json fields

--- a/fluent.conf
+++ b/fluent.conf
@@ -15,8 +15,12 @@
   type record_reformer
   renew_record false
   enable_ruby false
-  remove_keys __CURSOR,__REALTIME_TIMESTAMP,__MONOTONIC_TIMESTAMP,_BOOT_ID,_UID,_GID,_CAP_EFFECTIVE,_SYSTEMD_SLICE,SYSLOG_IDENTIFIER,_SYSTEMD_CGROUP,_CMDLINE,_COMM
+  remove_keys __CURSOR,__REALTIME_TIMESTAMP,__MONOTONIC_TIMESTAMP,_BOOT_ID,_UID,_GID,_CAP_EFFECTIVE,_SELINUX_CONTEXT,_SYSTEMD_SLICE,SYSLOG_IDENTIFIER,_SYSTEMD_CGROUP,_CMDLINE,_SOURCE_REALTIME_TIMESTAMP,_COMM,_HOSTNAME,MESSAGE,MESSAGE_ID,CODE_FILE,CODE_LINE,CODE_FUNCTION
   tag system.clean
+  <record>
+    message ${MESSAGE}
+    hostname ${_HOSTNAME}
+  </record>
 </match>
 
 <match *.**>
