Good enough journalctl handling
Normalizing messages from different transports, making sure everything
is in a format ElasticSearch can index nicely.

--- a/fluent.conf
+++ b/fluent.conf
@@ -8,27 +8,90 @@
   type tcp
   port 24225
   format json
-  tag system
+  tag systemd
 </source>
 
-<match system>
+<match systemd>
   type record_reformer
-  renew_record false
-  enable_ruby false
-  remove_keys __CURSOR,__REALTIME_TIMESTAMP,__MONOTONIC_TIMESTAMP,_BOOT_ID,_UID,_GID,_CAP_EFFECTIVE,_SELINUX_CONTEXT,_SYSTEMD_SLICE,SYSLOG_IDENTIFIER,_SYSTEMD_CGROUP,_CMDLINE,_SOURCE_REALTIME_TIMESTAMP,_COMM,_HOSTNAME,MESSAGE,MESSAGE_ID,CODE_FILE,CODE_LINE,CODE_FUNCTION
-  tag system.clean
-  <record>
-    message ${MESSAGE}
-    hostname ${_HOSTNAME}
-  </record>
+  remove_keys __CURSOR,__REALTIME_TIMESTAMP,__MONOTONIC_TIMESTAMP,_BOOT_ID,_UID,_GID,_CAP_EFFECTIVE,_SELINUX_CONTEXT,_SYSTEMD_SLICE,SYSLOG_IDENTIFIER,_SYSTEMD_CGROUP,_CMDLINE,_SOURCE_REALTIME_TIMESTAMP,_COMM,_SOURCE_MONOTONIC_TIMESTAMP
+  tag \${tag}.\${_TRANSPORT}
 </match>
 
-<match *.**>
+<filter systemd.journal>
+  @type record_transformer
+  renew_record true
+  enable_ruby false
+  <record>
+    message \${MESSAGE}
+    transport \${_TRANSPORT}
+    pid \${_PID}
+    priority \${PRIORITY}
+    unit \${UNIT}
+    ip_address ${INSTANCE_IP}
+    instance_id ${INSTANCE_ID}
+    instance_type ${INSTANCE_TYPE}
+    sg_id ${SECURITY_GROUP}
+    az ${AZ}
+  </record>
+</filter>
+
+<filter systemd.stdout>
+  @type record_transformer
+  renew_record true
+  enable_ruby false
+  <record>
+    message \${MESSAGE}
+    transport \${_TRANSPORT}
+    pid \${_PID}
+    unit \${_SYSTEMD_UNIT}
+    priority \${PRIORITY}
+    ip_address ${INSTANCE_IP}
+    instance_id ${INSTANCE_ID}
+    instance_type ${INSTANCE_TYPE}
+    sg_id ${SECURITY_GROUP}
+    az ${AZ}
+  </record>
+</filter>
+
+<filter systemd.syslog>
+  @type record_transformer
+  renew_record true
+  enable_ruby false
+  <record>
+    message \${MESSAGE}
+    transport \${_TRANSPORT}
+    pid \${_PID}
+    ip_address ${INSTANCE_IP}
+    instance_id ${INSTANCE_ID}
+    instance_type ${INSTANCE_TYPE}
+    sg_id ${SECURITY_GROUP}
+    az ${AZ}
+  </record>
+</filter>
+
+<filter systemd.kernel>
+  @type record_transformer
+  renew_record true
+  enable_ruby false
+  <record>
+    message \${MESSAGE}
+    transport \${_TRANSPORT}
+    priority \${PRIORITY}
+    syslog_facility \${SYSLOG_FACILITY}
+    ip_address ${INSTANCE_IP}
+    instance_id ${INSTANCE_ID}
+    instance_type ${INSTANCE_TYPE}
+    sg_id ${SECURITY_GROUP}
+    az ${AZ}
+  </record>
+</filter>
+
+<match **>
   type copy
   <store>
     type elasticsearch
-    host $ELASTICSEARCH_HOST
-    port $ELASTICSEARCH_PORT
+    host ${ELASTICSEARCH_HOST}
+    port ${ELASTICSEARCH_PORT}
     include_tag_key true
     tag_key @log_name
     logstash_format true
